<resources>
    <string name="food">FRESH FOOD</string>
    <string name="delivery">FAST DELIVERY</string>
    <string name="payment">EASY PAYMENT</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <string name="app_name">Dementia App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="otp">Please enter your phone number and Email and we will send OTP to verify</string>
    <string name="phone_number">Phone Number\n</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="blank" />
    <string name="name_ex">John Doe</string>
    <string name="email_ex">johndoe@gmail.com\n</string>
    <string name="phone_ex">+5578451232</string>
    <string name="proceed">Proceed</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="phone_or_email">Please enter your phone number or email then your password to login into your account</string>
    <string name="phone_or_email_holder">Phone Number or Email</string>
    <string name="no_or_email">Number/Email</string>
    <string name="password">Password\n</string>
    <string name="signup">Signup</string>
    <string name="type_of_acc">Type of Account</string>
    <string name="choose_acc_type">Choose your type of accunt It will be impossible to change</string>
    <string name="RadioButton1">I am a patient</string>
    <string name="radioButton2">I am a doctor</string>
    <string name="patient_option">Find a doctor online access medical report and more</string>
    <string name="doctor_option">Easiest way to reach your patients face to face</string>
    <string name="submit_Button">Submit</string>
    <string name="gender">Whats your gender</string>
    <string name="to_give_ux">To give better user experience we need to know your gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age">Whats your age</string>
    <string name="inc">+</string>
    <string name="dec">-</string>
    <string name="reset">Reset</string>
    <string name="start_no">0</string>
    <string name="depend">Most treatment depend on it</string>
    <string name="height">Whats your height</string>
    <string name="switch_to_ft">Switch to ft</string>
    <string name="weight_lb">weight - lb</string>
    <string name="height_cm">height - cm</string>
    <string name="pass">Pass</string>
    <string name="account_created">Account Created</string>
    <string name="instant_video_consultation">Instant video consultation</string>
    <string name="con_in_60">Connect within 60 seconds</string>
    <string name="know_more">Know more</string>
    <string name="find_doctors_near_you">Find doctors near you</string>
    <string name="confirmed_appointments">Confirmed appointments</string>
    <string name="medicines">Medicines</string>
    <string name="essentials_at_your_door_step">Essentials at your door step</string>
    <string name="lab_tests">Lab tests</string>
    <string name="sample_pickup_at_your_home">Sample pickup at your home</string>
    <string name="surgery">Surgery</string>
    <string name="safe_and_trusted_surgery_centers">Safe and trusted surgery centers</string>
    <string name="popular_medical_services">Popular Medical Services</string>
    <string name="benefit_for_physical_mental_and_virtual_care">Benefit for Physical Mental and Virtual care</string>
    <string name="personalized_care_services">Personalized care services</string>
    <string name="more">More</string>
    <string name="in_home_health_care">In-home health care</string>
    <string name="professional_medical_examination">Professional Medical Examination</string>
    <string name="complete_medical_supply">Complete medical supply</string>
    <string name="meet_our_experienced_doctors">Meet Our Experienced Doctors</string>
    <string name="professional_doctors">Professional Doctors</string>
    <string name="debra_hobson">Debra Hobson</string>
    <string name="justin_warrick">Justin Warrick</string>
    <string name="glenn_hicks">Glenn Hicks</string>
    <string name="cardiologist">An experienced cardiologist, combines cutting-edge technology with compassionate care to diagnose and treat heart conditions, ensuring her patients lead healthier lives.</string>
    <string name="pediatrician">A skilled pediatrician, creates a warm and welcoming environment in her practice, where children feel at ease while receiving the highest quality medical attention.</string>
    <string name="elisa_clarkson">Elisa Clarkson</string>
    <string name="Orthopedic">A dedicated orthopedic surgeon, specializes in sports injuries, employing advanced surgical techniques to help athletes and individuals regain their mobility and strength.</string>
    <string name="neirologist">a renowned neurologist, is at the forefront of neurological research, striving to unravel mysteries of the brain while providing exceptional care to patients with complex neurological disorders.</string>
    <string name="make_an_appointment">Make An Appointment</string>
    <string name="make_an_appointment_to_doctor_visit">Make An Appointment to Doctor Visit</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="services_category">Services Category</string>
    <string name="mm_dd_yy">MM/DD/YY</string>
    <string name="choose_doctor">Choose Doctor</string>
    <string name="book_now">Book Now</string>
    <string name="why_choose_our_medical_services">Why Choose Our Medical Services</string>
    <string name="breakthrough_in_comprehensive_flexible_care_deliver_models">Breakthrough in Comprehensive Flexible Care Deliver models</string>
    <string name="optimize_your_health_care_services">Optimize your health care services</string>
    <string name="boost_employee_engagement">Boost Employee Engagement</string>
    <string name="accelerate_your_return_on_investment">Accelerate your return on investment</string>
    <string name="neurosight">Neurosight</string>
    <string name="john">John</string>
    <string name="search">Search For…</string>
    <string name="about_medicare">About Medicare</string>
    <string name="all_in_one_worksite_health_solution">All in one Worksite Health Solution</string>
    <string name="_25_years_of_experience_in_medical_services">25 Years of Experience In Medical Services</string>
    <string name="medicare_huh">Introducing Medicare, the revolutionary app designed to seamlessly bridge the gap between patients and doctors, making healthcare access effortless. With a user-friendly interface, it not only facilitates quick appointments but also provides invaluable resources and information about dementia, empowering users and their families with essential knowledge and support.</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="password_sign">Password</string>
    <string name="Home">Home</string>
    <string name="Appointment">Appointment</string>
    <string name="Chat">Chat</string>
    <string name="Profile">Profile</string>
    <string name="Article">Article</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_wait">Please wait</string>
    <string name="show_more">Show more</string>
    <string name="testimonial1">I cannot thank you enough for your understanding and support through some difficult times. I would highly recommend your company to anyone. Your company has made our life easier</string>
    <string name="_65_years">65 years</string>
    <string name="_77_years">77 Years\n</string>
    <string name="testimonial2">The application has been a lifeline, connecting me with doctors promptly during my health concerns. I\'d urge anyone to give it a try. It\'s transformed how I manage my well-being.</string>
    <string name="_71_years">71 years</string>
    <string name="practice_location">Practice Location</string>
    <string name="orlando_fl_32809_united_states">Orlando, FL 32809, United States</string>
    <string name="location_map">Location Map</string>
</resources>