<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:showAsAction="never"
    xmlns:tools="http://schemas.android.com/tools"
    android:visible="false"
    android:id="@+id/menuu">


    <item android:id="@+id/Homie"
        android:icon="@drawable/home"
        android:title="@string/Home"
        android:enabled="true"
        />


    <item
        android:id="@+id/connect"
        android:icon="@drawable/calendar"
        android:title="@string/Appointment"
        app:showAsAction="never"
        android:enabled="true"


        />

    <!--    <a target="_blank" href="https://icons8.com/icon/97367/head-with-brain">Head With Brain</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
    <item android:id="@+id/infooo"
        android:icon="@drawable/chat"
        android:title="@string/Chat"
        app:showAsAction="never"
        android:enabled="true"

        />

    <item
        android:id="@+id/connect2"
        android:icon="@drawable/user"
        android:title="@string/Profile"
        app:showAsAction="never"
        android:enabled="true"


        />

    <!--    <a target="_blank" href="https://icons8.com/icon/97367/head-with-brain">Head With Brain</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
    <item android:id="@+id/infooo2"
        android:icon="@drawable/newspaper"
        android:title="@string/Article"
        app:showAsAction="never"
        android:enabled="true"

        />



    <!--    <a target="_blank" href="https://icons8.com/icon/uh80PIfoLgYI/light-bulb">Light Bulb</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
    <!--    <item android:id="@+id/Bulletin"-->
    <!--        android:icon="@drawable/newsss"-->
    <!--        android:title="@string/Bulletin"-->
    <!--        app:showAsAction="never"-->
    <!--        />-->



</menu>


    <!--    <item-->
    <!--        android:id="@+id/switch_theme"-->
    <!--        android:icon="@drawable/ic_baseline_highlight_24"-->
    <!--        android:title="@string/switch_theme"-->
    <!--        app:actionViewClass="android.widget.Switch"-->
    <!--        />-->



