<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountTypeActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_acc"
        android:textColor="@color/Purple"
        android:textSize="25sp"
        android:textStyle="bold|normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="359dp"
        android:layout_height="69dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/choose_acc_type"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.059" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#024CAF50"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.137">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton1"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="222dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:text="@string/patient_option"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="311dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:text="@string/radioButton2"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="383dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:text="@string/doctor_option"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Purple"
        android:text="@string/submit_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
        app:layout_constraintVertical_bias="0.647" />

</androidx.constraintlayout.widget.ConstraintLayout>