<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DocAddressFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practice_location"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orlando_fl_32809_united_states"
            android:textColor="@color/Purple"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_map"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:drawableStartCompat="@drawable/ic_location" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DocAddressFragment"
        android:layout_marginTop="20dp">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:context=".DocAddressFragment" />

</FrameLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/make_an_appointment"
        android:textColor="@color/white"
        android:background="@drawable/doc_btn"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"/>

</LinearLayout>
</ScrollView>